--- a/portfolio.html
+++ b/portfolio.html
@@ -11,6 +11,13 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/portfolio.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+      integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
     <header class="global-header">
@@ -45,93 +52,99 @@
       </section>
       <!-- Section with banking app,cashless payment and meditation app -->
       <section class="second-section">
-        <ul class="second-list">
-          <li>
-            <div>
-              <img src="images/img8.jpg" alt="App Interface " width="264" />
-              <h3>Banking App Interface Concept</h3>
-              <p>App</p>
-            </div>
-          </li>
-          <li>
-            <div>
-              <img
-                src="images/img9.jpg"
-                alt="Marketing's picture"
-                width="264"
-              />
-              <h3>Cashless Payment</h3>
-              <p>Marketing</p>
-            </div>
-          </li>
-          <li>
-            <div>
-              <img src="images/img10.jpg" alt="App's picture" width="264" />
-              <h3>Meditation App</h3>
-              <p>App</p>
-            </div>
-          </li>
-        </ul>
+        <div class="second-container">
+          <ul class="second-list">
+            <li>
+              <div>
+                <img src="images/img8.jpg" alt="App Interface " width="264" />
+                <h3>Banking App Interface Concept</h3>
+                <p>App</p>
+              </div>
+            </li>
+            <li>
+              <div>
+                <img
+                  src="images/img9.jpg"
+                  alt="Marketing's picture"
+                  width="264"
+                />
+                <h3>Cashless Payment</h3>
+                <p>Marketing</p>
+              </div>
+            </li>
+            <li>
+              <div>
+                <img src="images/img10.jpg" alt="App's picture" width="264" />
+                <h3>Meditation App</h3>
+                <p>App</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- Section with taxi service,screen illustrations and online courses -->
       <section class="third-section">
-        <ul class="third-list">
-          <li>
-            <div>
-              <img src="images/img11.jpg" alt="Taxi Service " width="264" />
-              <h3>Taxi Service</h3>
-              <p>Marketing</p>
-            </div>
-          </li>
-          <li>
-            <div>
-              <img
-                src="images/img12.jpg"
-                alt="Screen Illustrations"
-                width="264"
-              />
-              <h3>Screen Illustrations</h3>
-              <p>Design</p>
-            </div>
-          </li>
-          <li>
-            <div>
-              <img src="images/img13.jpg" alt="Online Courses" width="264" />
-              <h3>Online Courses</h3>
-              <p>Marketing</p>
-            </div>
-          </li>
-        </ul>
+        <div class="third-container">
+          <ul class="third-list">
+            <li>
+              <div>
+                <img src="images/img11.jpg" alt="Taxi Service " width="264" />
+                <h3>Taxi Service</h3>
+                <p>Marketing</p>
+              </div>
+            </li>
+            <li>
+              <div>
+                <img
+                  src="images/img12.jpg"
+                  alt="Screen Illustrations"
+                  width="264"
+                />
+                <h3>Screen Illustrations</h3>
+                <p>Design</p>
+              </div>
+            </li>
+            <li>
+              <div>
+                <img src="images/img13.jpg" alt="Online Courses" width="264" />
+                <h3>Online Courses</h3>
+                <p>Marketing</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- Section with instagram stories concept,organic food and frech coffee -->
       <section class="fourth-section">
-        <ul class="fourth-list">
-          <li>
-            <div>
-              <img
-                src="images/img14.jpg"
-                alt="Instagram Stories Concept "
-                width="264"
-              />
-              <h3>Instagram Stories Concept</h3>
-              <p>Design</p>
-            </div>
-          </li>
-          <li>
-            <div>
-              <img src="images/img15.jpg" alt="Organic Food" width="264" />
-              <h3>Organic Food</h3>
-              <p>Web Site</p>
-            </div>
-          </li>
-          <li>
-            <div>
-              <img src="images/img16.jpg" alt="Fresh Coffee" width="264" />
-              <h3>Fresh Coffee</h3>
-              <p>Web Site</p>
-            </div>
-          </li>
-        </ul>
+        <div class="fourth-container">
+          <ul class="fourth-list">
+            <li>
+              <div>
+                <img
+                  src="images/img14.jpg"
+                  alt="Instagram Stories Concept "
+                  width="264"
+                />
+                <h3>Instagram Stories Concept</h3>
+                <p>Design</p>
+              </div>
+            </li>
+            <li>
+              <div>
+                <img src="images/img15.jpg" alt="Organic Food" width="264" />
+                <h3>Organic Food</h3>
+                <p>Web Site</p>
+              </div>
+            </li>
+            <li>
+              <div>
+                <img src="images/img16.jpg" alt="Fresh Coffee" width="264" />
+                <h3>Fresh Coffee</h3>
+                <p>Web Site</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="global-footer">
@@ -139,8 +152,9 @@
         <a href="index.html" class="logo">studio</a>
 
         <p>
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
+          Increase the flow of customers and <br />
+          sales for your business with digital <br />
+          marketing & growth solutions.
         </p>
       </div>
     </footer>
